Subject: Fix buttons
Add buttons to mapFragment.
Change name of buttons on draw and collection.

--- a/android/app/src/main/res/layout/fragment_collection.xml
+++ b/android/app/src/main/res/layout/fragment_collection.xml
@@ -72,11 +72,11 @@
         app:layout_constraintTop_toBottomOf="@+id/someId">
 
         <RadioButton
-            android:id="@+id/speed_low"
+            android:id="@+id/speed_slow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="@string/speed_low" />
+            android:text="@string/speed_slow" />
 
         <RadioButton
             android:id="@+id/speed_med"
@@ -85,10 +85,10 @@
             android:text="@string/speed_med" />
 
         <RadioButton
-            android:id="@+id/speed_high"
+            android:id="@+id/speed_fast"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/speed_high" />
+            android:text="@string/speed_fast" />
 
     </RadioGroup>
 
