--- a/android/app/src/main/res/layout/listview_item.xml
+++ b/android/app/src/main/res/layout/listview_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/device_name"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:textSize="13sp"
-        android:layout_centerVertical="true" />
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:textSize="20sp" />
 
 </RelativeLayout>
