--- a/android/app/src/main/res/layout/fragment_draw.xml
+++ b/android/app/src/main/res/layout/fragment_draw.xml
@@ -81,6 +81,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
         android:orientation="horizontal"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toTopOf="@+id/start_car_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
