Subject: Add borders to seedbar and radiogroup
Description:
- Add borders to seedbar
- Add borders to radiogroup

Co-authored-by: EmanuelDellsen <emanuel.dellsen@gmail.com>

--- a/android/app/src/main/res/drawable/border.xml
+++ b/android/app/src/main/res/drawable/border.xml
@@ -3,17 +3,19 @@
     android:shape="rectangle">
 
     <!-- view background color -->
-    <shape>
-        <solid
-            android:color="@color/darkBackground">
-        </solid>
-        <stroke
-            android:color="@color/button_corners"
-            android:width="2dp">
-        </stroke>
-        <corners
-            android:radius="150dp">
-        </corners>
-    </shape>
+    <item>
+        <shape>
+            <solid
+                android:color="@color/darkBackground">
+            </solid>
+            <stroke
+                android:color="@color/button_corners"
+                android:width="2dp">
+            </stroke>
+            <corners
+                android:radius="150dp">
+            </corners>
+        </shape>
+    </item>
 
 </selector>
