--- a/android/app/src/main/res/layout/fragment_draw.xml
+++ b/android/app/src/main/res/layout/fragment_draw.xml
@@ -9,16 +9,16 @@
     tools:context="com.example.hajken.fragments.DrawFragment">
 
     <TextView
-        android:id="@+id/amount_of_loops"
+        android:id="@+id/amount_of_repetitions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/amount_of_repetitions"
-        android:textSize="15sp"
-        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
+        android:textColor="@color/button_text_color_active"
         app:layout_constraintBottom_toTopOf="@+id/seekbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="37dp"
         android:background="@drawable/button"
         android:text="@string/start_draw_button"
         android:textColor="@drawable/button_text_color"
@@ -41,40 +41,43 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radiogroup2" />
+        app:layout_constraintTop_toBottomOf="@+id/radio_group" />
 
     <com.example.hajken.helpers.CanvasView
         android:id="@+id/canvasView"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/device_list"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekbar"
+        app:layout_constraintBottom_toTopOf="@+id/amount_of_repetitions"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/device_drawFragment"
-        android:layout_width="280dp"
-        android:layout_height="34dp"
+        android:id="@+id/device_draw_fragment"
+        android:layout_width="300dp"
+        android:layout_height="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
-        android:textColor="@color/deviceNameColour"
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
         app:layout_constraintBottom_toTopOf="@+id/canvasView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <RadioGroup
-        android:id="@+id/radiogroup2"
+        android:id="@+id/radio_group"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -95,8 +98,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:checked="true"
+            android:buttonTint="@color/default_radio_button"
             android:text="@string/speed_slow"
-            android:textAllCaps="true" />
+            android:textColor="@color/button_text_color_active"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
 
         <RadioButton
             android:id="@+id/speed_med"
@@ -104,7 +109,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/speed_med"
-            android:textAllCaps="true" />
+            android:buttonTint="@color/default_radio_button"
+            android:textColor="@color/button_text_color_active"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
 
         <RadioButton
             android:id="@+id/speed_fast"
@@ -112,7 +119,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/speed_fast"
-            android:textAllCaps="true" />
+            android:buttonTint="@color/default_radio_button"
+            android:textColor="@color/button_text_color_active"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
 
     </RadioGroup>
 
@@ -121,13 +130,15 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/border"
-        app:layout_constraintBottom_toTopOf="@+id/radiogroup2"
+        android:progressTint="@color/progess_color"
+        android:thumbTint="@color/thumb_color"
+        app:layout_constraintBottom_toTopOf="@+id/radio_group"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/canvasView" />
+        app:layout_constraintTop_toBottomOf="@+id/amount_of_repetitions" />
 
 </android.support.constraint.ConstraintLayout>
