--- a/android/app/src/main/res/layout/list_item.xml
+++ b/android/app/src/main/res/layout/list_item.xml
@@ -24,7 +24,7 @@
 
         android:layout_weight="3"
         android:text="New Text"
-        android:textColor="@color/deviceNameColour"
+        android:textColor="@color/device_name_color"
         android:textSize="22sp" />
 
 </LinearLayout>
