--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- color scheme: https://digitalsynopsis.com/design/beautiful-color-palettes-combinations-schemes/ moonlight bytes 6-->
-
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
@@ -19,12 +17,19 @@
     <color name="darkBackground">#21768f</color>
 
     <!-- TextColour -->
-    <color name="deviceNameColour">#717171</color>
+    <color name="device_name_color">#FFFFFF</color>
     <color name="button_text_color_non_active">#4F4F52</color>
     <color name="button_text_color_active">#ffffff</color>
 
     <!-- SymbolColour -->
-    <color name="symbolColour">#894941</color>
+    <color name="symbolColour">#114F63</color>
+
+    <!-- Radio button color -->
+    <color name="default_radio_button">#FFFFFF</color>
+
+    <!-- Seek bar color -->
+    <color name="thumb_color">#ab4336</color>
+    <color name="progess_color">#FFFFFF</color>
 
 
 </resources>
