Subject: Add bitmaps to recycler view
Description: Add bitmaps to recycler view, class to bind each bitmap
together with its respective coordinates

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name= "white">#ffffff</color>
 
     <!-- Button -->
     <color name="button_non_active">#7a7d84</color>
