--- a/android/app/src/main/res/layout/list_item.xml
+++ b/android/app/src/main/res/layout/list_item.xml
@@ -8,14 +8,12 @@
 
     <ImageView
         android:id="@+id/itemImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_margin="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1"
-        android:scaleType="fitCenter"/>
+        android:layout_marginTop="10dp" />
 
-    <TextView
+   <!--/* <TextView
         android:id="@+id/itemText"
         android:layout_width="141dp"
         android:layout_height="wrap_content"
@@ -26,5 +24,6 @@
         android:text="New Text"
         android:textColor="@color/device_name_color"
         android:textSize="22sp" />
+    -->
 
 </LinearLayout>
