--- a/android/app/src/main/res/layout/listview_item.xml
+++ b/android/app/src/main/res/layout/listview_item.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:gravity="center"/>
 
 </RelativeLayout>
