Subject: Add toasty library
Description:
- Some refactoring
- Add toasty library

--- a/android/app/src/main/res/drawable/border.xml
+++ b/android/app/src/main/res/drawable/border.xml
@@ -6,10 +6,10 @@
     <item>
         <shape>
             <solid
-                android:color="@color/darkBackground">
+                android:color="@color/background_color">
             </solid>
             <stroke
-                android:color="@color/button_corners"
+                android:color="@color/button_corner_color"
                 android:width="2dp">
             </stroke>
             <corners
