--- a/android/app/src/main/res/layout/fragment_collection.xml
+++ b/android/app/src/main/res/layout/fragment_collection.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground">
+    android:background="@color/background_color">
 
 
     <android.support.v7.widget.RecyclerView
@@ -36,7 +36,7 @@
         android:layout_marginBottom="10dp"
         android:text="@string/amount_of_repetitions"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-        android:textColor="@color/button_text_color_active"
+        android:textColor="@color/active_button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/seekbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,34 +82,34 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:checked="true"
             android:text="@string/speed_slow"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
         <RadioButton
             android:id="@+id/speed_med"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:text="@string/speed_med"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
         <RadioButton
             android:id="@+id/speed_fast"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:text="@string/speed_fast"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
     </RadioGroup>
 
@@ -122,7 +122,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="80dp"
         android:background="@drawable/border"
-        android:progressTint="@color/progess_color"
+        android:progressTint="@color/progress_color"
         android:thumbTint="@color/thumb_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
