--- a/android/app/src/main/res/layout/fragment_gateway.xml
+++ b/android/app/src/main/res/layout/fragment_gateway.xml
@@ -4,7 +4,7 @@
     android:id="@+id/gatewayLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground">
+    android:background="@color/background_color">
 
     <ImageView
         android:id="@+id/imageView5"
