--- a/android/app/src/main/res/drawable/device_list.xml
+++ b/android/app/src/main/res/drawable/device_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="@color/darkBackground"
-        android:endColor="@color/darkBackground"
+    <gradient android:startColor="@color/background_color"
+        android:endColor="@color/background_color"
         android:angle="270"/>
     <corners android:radius="10dp"/>
     <stroke android:width="2dp" android:color="#FFFFFF" />
