--- a/android/app/src/main/res/layout/fragment_draw.xml
+++ b/android/app/src/main/res/layout/fragment_draw.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/darkBackground"
+    android:background="@color/background_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.hajken.fragments.DrawFragment">
@@ -18,7 +18,7 @@
         android:layout_marginBottom="10dp"
         android:text="@string/amount_of_repetitions"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-        android:textColor="@color/button_text_color_active"
+        android:textColor="@color/active_button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/seekbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,31 +81,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:checked="true"
             android:text="@string/speed_slow"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
         <RadioButton
             android:id="@+id/speed_med"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:text="@string/speed_med"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
         <RadioButton
             android:id="@+id/speed_fast"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:text="@string/speed_fast"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
     </RadioGroup>
 
@@ -118,7 +118,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="80dp"
         android:background="@drawable/border"
-        android:progressTint="@color/progess_color"
+        android:progressTint="@color/progress_color"
         android:thumbTint="@color/thumb_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
