--- a/android/app/src/main/res/layout/fragment_google_maps.xml
+++ b/android/app/src/main/res/layout/fragment_google_maps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground"
+    android:background="@color/background_color"
     tools:context=".fragments.GoogleMapsFragment">
 
     <com.google.android.gms.maps.MapView
@@ -33,7 +33,7 @@
         android:layout_marginBottom="10dp"
         android:text="@string/amount_of_repetitions"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-        android:textColor="@color/button_text_color_active"
+        android:textColor="@color/active_button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/seekbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,31 +79,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:checked="true"
             android:text="@string/speed_slow"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
         <RadioButton
             android:id="@+id/speed_med"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:text="@string/speed_med"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
         <RadioButton
             android:id="@+id/speed_fast"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:buttonTint="@color/default_radio_button"
+            android:buttonTint="@color/default_radio_button_color"
             android:text="@string/speed_fast"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
-            android:textColor="@color/button_text_color_active" />
+            android:textColor="@color/active_button_text_color" />
 
     </RadioGroup>
 
@@ -116,7 +116,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="80dp"
         android:background="@drawable/border"
-        android:progressTint="@color/progess_color"
+        android:progressTint="@color/progress_color"
         android:thumbTint="@color/thumb_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
