--- a/android/app/src/main/res/layout/fragment_scan.xml
+++ b/android/app/src/main/res/layout/fragment_scan.xml
@@ -4,7 +4,7 @@
     android:id="@+id/scan_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground">
+    android:background="@color/background_color">
 
     <Button
         android:id="@+id/scan_button"
@@ -73,7 +73,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/device_list"
-        android:textColor="@color/device_name_color"
+        android:textColor="@color/default_text_color"
         app:layout_constraintBottom_toTopOf="@+id/scan_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
