Subject: Add startPoint and display of actual route
Description:
- Add startPoint to canvas onDraw
- Add display of actual route on canvas
- Change color of drawn route to differ between drawn route and actual
route

Co-authored-by: EmanuelDellsen <emanuel.dellsen@gmail.com>

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -31,4 +31,12 @@
     <color name="thumb_color">#ab4336</color>
     <color name="progress_color">#FFFFFF</color>
 
+    <!-- CanvasView colors -->
+    <color name="start_point_color">#ab4336</color>
+    <color name="drawn_path_color">#114F63</color>
+    <color name="actual_path_color">#FFFFFF</color>
+
+
+
+
 </resources>
