--- a/android/app/src/main/res/layout/fragment_scan.xml
+++ b/android/app/src/main/res/layout/fragment_scan.xml
@@ -16,9 +16,9 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="80dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_general"
         android:text="@string/scan_button"
-        android:textColor="@drawable/button_text_color"
+        android:textColor="@drawable/btn_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,9 +35,9 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_general"
         android:text="@string/unpair_button"
-        android:textColor="@drawable/button_text_color"
+        android:textColor="@drawable/btn_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.8" />
 
     <Button
-        android:id="@+id/routes_button"
+        android:id="@+id/gateway_button"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
@@ -54,9 +54,9 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_general"
         android:text="@string/routes_button"
-        android:textColor="@drawable/button_text_color"
+        android:textColor="@drawable/btn_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
