--- a/android/app/src/main/res/drawable/btn_text_color.xml
+++ b/android/app/src/main/res/drawable/btn_text_color.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- button text color when not activated -->
+    <!-- btn_general text color when not activated -->
     <item android:state_activated="false"
         android:color="@color/non_active_button_text_color" />
 
-    <!-- button text color when active -->
+    <!-- btn_general text color when active -->
     <item android:state_activated="true"
         android:color="@color/active_button_text_color" />
 
