--- a/android/app/src/main/res/layout/fragment_google_maps.xml
+++ b/android/app/src/main/res/layout/fragment_google_maps.xml
@@ -49,9 +49,9 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_general"
         android:text="@string/start_draw_button"
-        android:textColor="@drawable/button_text_color"
+        android:textColor="@drawable/btn_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_btn"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +115,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="80dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_btn"
         android:progressTint="@color/progress_color"
         android:thumbTint="@color/thumb_color"
         app:layout_constraintBottom_toBottomOf="parent"
