--- a/android/app/src/main/res/layout/fragment_start.xml
+++ b/android/app/src/main/res/layout/fragment_start.xml
@@ -16,9 +16,9 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_general"
         android:text="@string/find_vehicle_button"
-        android:textColor="@drawable/button_text_color"
+        android:textColor="@drawable/btn_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.19"
-        app:srcCompat="@drawable/circular_shape" />
+        app:srcCompat="@drawable/shape_circular" />
 
 
 </android.support.constraint.ConstraintLayout>
